<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter0"
        android:title="@string/filter_options_filter0"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter1"
        android:title="@string/filter_options_filter1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter2"
        android:title="@string/filter_options_filter2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter3"
        android:title="@string/filter_options_filter3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter4"
        android:title="@string/filter_options_filter4"
        app:showAsAction="never" />

</menu>